--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>The Printliminator Demo</title>
 	<link rel="stylesheet" href="demo/css/style.css">
 	<link rel="icon" type="image/x-icon" href="src/icons/favicon.ico">
-	<link rel="icon" type="image/png" href="src/icons/icon-16.png">
+	<link rel="icon" type="image/png" href="src/icons/icon16.png">
 </head>
 
 <body>
@@ -33,12 +33,12 @@ To make changes, modify the "src/bookmarklet/index.html"
 
 		<h1>The Printliminator<span id="dev-mode"></span></h1>
 
-		<p>The Printliminator (<a href="https://github.com/CSS-Tricks/The-Printliminator">repo</a>) is a bookmarklet with some simple tools you can use to makes websites print better. One click to activate, and then click to remove elements from the page, remove graphics, and apply better print styling.</p>
+		<p>The Printliminator (<a href="https://github.com/ILikePython256/The-Printliminator">repo</a>) is a bookmarklet with some simple tools you can use to makes websites print better. One click to activate, and then click to remove elements from the page, remove graphics, and apply better print styling.</p>
 
 		<p>Here is the bookmarklet:</p>
 
 		<p>
-			<a href="javascript:/*THE.PRINTLIMINATOR*/(function(){function%20loadScript(a,b){var%20c=document.createElement('script'),d=document.getElementsByTagName('head')[0],e=!1;c.type='text/javascript',c.src=a,c.onload=c.onreadystatechange=function(){e||this.readyState&&'loaded'!=this.readyState&&'complete'!=this.readyState||(e=!0,b())},d.appendChild(c)}loadScript('//css-tricks.github.io/The-Printliminator/printliminator.min.js',function(){thePrintliminator.init()});})();" id="bookmarklet" class="bookmarklet">The Printliminator</a>
+			<a href="javascript:/*THE.PRINTLIMINATOR*/(function(){function%20loadScript(a,b){var%20c=document.createElement('script'),d=document.getElementsByTagName('head')[0],e=!1;c.type='text/javascript',c.src=a,c.onload=c.onreadystatechange=function(){e||this.readyState&&'loaded'!=this.readyState&&'complete'!=this.readyState||(e=!0,b())},d.appendChild(c)}loadScript('//ILikePython256.github.io/The-Printliminator/printliminator.min.js',function(){thePrintliminator.init()});})();" id="bookmarklet" class="bookmarklet">The Printliminator</a>
 			<span class="drag-arrow"><strong>&larr;</strong> drag to your bookmarks bar</span>
 		</p>
 
